# ccp

./: Cargo.toml  README.md
.github/workflows/: builds.yaml
src/: main.rs
src/messengers/: mod.rs  sender.rs  telegram.rs  whatsapp.rs
src/utils/: vault.rs
