[package]
name = "ccp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
clap-stdin = "0.4.0"
homedir = "0.2.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json", "multipart", "blocking"] }
securestore = { version = "0.100.0", features = ["openssl-vendored"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"
